# k2pdfopt-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: assets-check.yml  audit.yml  ci.yml  regression.yml
app/k2pdfopt/: Cargo.toml
app/k2pdfopt/src/: main.rs
completions/: README.md
completions/bash/: k2pdfopt.bash
completions/elvish/: k2pdfopt.elv
completions/fish/: k2pdfopt.fish
completions/powershell/: k2pdfopt.ps1
completions/zsh/: _k2pdfopt
crates/k2cli/: Cargo.toml
crates/k2cli/src/: args.rs  env.rs  help.rs  lib.rs  subcommands.rs
crates/k2cli/tests/: args_test.rs
crates/k2core/: Cargo.toml
crates/k2core/src/: autocrop.rs  bitmap.rs  deskew.rs  histogram.rs  lib.rs  preprocess.rs  rect.rs  rotate.rs
crates/k2core/tests/: autocrop_test.rs  bitmap_test.rs  deskew_test.rs  preprocess_test.rs
crates/k2io/: Cargo.toml
crates/k2io/src/: lib.rs
crates/k2layout/: Cargo.toml
crates/k2layout/src/: breakpoints.rs  crop.rs  event.rs  figure.rs  hyphen.rs  justify.rs  lib.rs  reflow_pipeline.rs  region.rs  regions.rs  rows.rs  words.rs  wrap.rs
crates/k2layout/src/master/: master_canvas.rs  mod.rs  native_box.rs  ocr_staging.rs  outline_mapper.rs  output_paginator.rs  page_state.rs  spacing_state.rs  wrap_state.rs
crates/k2layout/tests/: breakpoints_test.rs  columns_test.rs  crop_test.rs  reflow_pipeline_test.rs  rows_test.rs  words_test.rs  wrap_test.rs
crates/k2ocr/: Cargo.toml
crates/k2ocr/src/: lang.rs  leptess_ffi.rs  lib.rs  mapping.rs  scoped_tempfile.rs  tesseract_cli.rs  tsv_parser.rs  types.rs
crates/k2ocr/tests/: mapping_test.rs  tesseract_smoke.rs
crates/k2pdfout/: Cargo.toml
crates/k2pdfout/src/: bitmap_pdf.rs  lib.rs  ocr_layer.rs  outline.rs
crates/k2pdfout/tests/: bitmap_pdf_test.rs
crates/k2pipeline/: Cargo.toml
crates/k2pipeline/src/: convert.rs  lib.rs  observer.rs  ocr_bridge.rs
crates/k2pipeline/tests/: convert_test.rs  observer_test.rs
crates/k2render/: Cargo.toml
crates/k2render/src/: lib.rs  mutool.rs  pdfinfo.rs  renderer.rs
crates/k2render/tests/: mutool_test.rs  pdfinfo_test.rs
crates/k2settings/: Cargo.toml
crates/k2settings/src/: behavior.rs  destination.rs  device.rs  layout.rs  lib.rs  ocr.rs  output.rs  pagelist.rs  serialize.rs  settings.rs  source.rs
crates/k2settings/tests/: default_value_test.rs  device_test.rs  pagelist_test.rs  roundtrip_test.rs
crates/k2types/: Cargo.toml
crates/k2types/src/: bitmap_page.rs  lib.rs  ocr_word.rs  outline_entry.rs  output_page.rs  word_layout.rs
tests/: README.md
tests/fixtures/: INDEX.json
tests/golden/_regression/1778996082/: chinese.html  encrypted.json  summary.json
tests/golden/_regression/1779150278/: formula.html  index.html  summary.json  three-column.html
tests/golden/_regression/1779182581/: skewed-scan.json  summary.json
tests/golden/_regression/1779194772/: complex-layout.json  mixed-text-image.json  single-column.json  summary.json
tests/golden/_regression/1779201189/: cover.html  single-column.html  summary.json  two-column.html
tests/golden/_regression/1779203418/: skewed-scan.html  summary.json
tests/golden/_regression/1779208181/: scanned.json  summary.json
tests/golden/_regression/1779251309/: chinese.json  formula.json  summary.json
tests/golden/_regression/1779252956/: encrypted.html  mixed-text-image.html  summary.json  three-column.json
tests/golden/_regression/1779253438/: scanned.html  summary.json
tests/golden/_regression/1779258051/: cover.json  summary.json
tests/golden/_regression/1779265353/: complex-layout.html  summary.json  two-column.json
tests/golden/_regression/1779265496/: index.html  summary.json
tests/golden/blank-page/: metadata.json
tests/golden/chinese/: metadata.json
tests/golden/complex-layout/: metadata.json
tests/golden/cover/: metadata.json
tests/golden/encrypted/: metadata.json
tests/golden/formula/: metadata.json
tests/golden/mixed-text-image/: metadata.json
tests/golden/scanned/: metadata.json
tests/golden/single-column/: metadata.json
tests/golden/skewed-scan/: metadata.json
tests/golden/three-column/: metadata.json
tests/golden/two-column/: metadata.json
tools/compare_pages/: Cargo.toml
tools/compare_pages/src/: lib.rs  main.rs
tools/compare_pages/tests/: regression.rs
tools/gen_assets/: Cargo.toml
tools/gen_assets/src/: main.rs
tools/run_c_baseline/: Cargo.toml
tools/run_c_baseline/src/: main.rs
tools/run_regression/: Cargo.toml
tools/run_regression/src/: main.rs
