[package]
name = "k2types"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "k2pdfopt-rs shared cross-crate types (OutputPage / OcrWord / OutlineEntry / PageId / BitmapPage)"

[lints]
workspace = true

[dependencies]
thiserror = "1"
