[package]
name = "compare-pages"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PDF page comparison tool (SSIM + pixel diff) for k2pdfopt-rs regression"

[lints]
workspace = true

[lib]
name = "compare_pages"
path = "src/lib.rs"

[[bin]]
name = "compare_pages"
path = "src/main.rs"

[dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
