[package]
name = "run-c-baseline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Generate golden baselines from C k2pdfopt for regression testing"

[lints]
workspace = true

[[bin]]
name = "run_c_baseline"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
