[package]
name = "run-regression"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Batch regression runner for k2pdfopt-rs (12 fixtures, SSIM + diff)"

[lints]
workspace = true

[[bin]]
name = "run_regression"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
compare-pages = { path = "../compare_pages" }
